--- a/public/422.html
+++ b/public/422.html
@@ -76,6 +76,9 @@ if (window.location.host == "mrgi-app.herokuapp.com") {
                     z-index: -2177483647!important;
                     display: none!important;
                 }
+                ._404errortextdark {
+                	color: #e74c3c!important;
+                }
             /* frosted glass with CSS Filters */
             .frosted
             {
