fix logo redirect to home on public error pages

--- a/public/404.html
+++ b/public/404.html
@@ -495,11 +495,14 @@ if (window.location.host == "mrgi-app.herokuapp.com") {
                     <div class="small-superellipse small-superellipse-two"></div>
                     <div class="small-superellipse small-superellipse-three"></div>
                     <div class="big-superellipse front">
-                        <div class="superellipse-content"><img
-                            src="https://uploads-ssl.webflow.com/5b1869567b8ef6525fc8c330/5b2be235a7397be9e3e8c31e_3364f11f-61bb-4567-bf7a-4361ac5ccc87%5B1%5D.png"
-                            width="102"
-                            class="logo"
-                            data-ix="404entrance"/>
+                        <div class="superellipse-content">
+                        	<a href="/">
+		                        <img
+		                            src="https://uploads-ssl.webflow.com/5b1869567b8ef6525fc8c330/5b2be235a7397be9e3e8c31e_3364f11f-61bb-4567-bf7a-4361ac5ccc87%5B1%5D.png"
+		                            width="102"
+		                            class="logo"
+		                            data-ix="404entrance"/>
+		                    </a>
                             <div class="title">404 error</div>
                             <a href="#" onclick="window.history.back()" class="link w-button" data-ix="ctaentrance">
                                 <strong>Back to last page</strong>
